[package]
name = "cloudfront-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.7.3", default-features = false, features = ["s3"] }
aws-config = "0.55"
aws-sdk-s3 = "0.25"

lambda_runtime = "0.7"

tar = "0.4"
flate2 = "1.0.25"

# snippet-start:[s3.rust.s3-object-lambda-cargo.toml]
aws-endpoint = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
# snippet-end:[s3.rust.s3-object-lambda-cargo.toml]
aws-smithy-client = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main", features = [
  "test-util",
] }
aws-smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main", features = ["rt-tokio"] }
aws-smithy-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
bytes = "0.4.12"
futures-util = { version = "0.3.21", features = ["alloc"] }
http = "0.2.8"
http-body = "0.4.5"
md-5 = "0.10.1"
rand = "0.5.0"
clap = { version = "4.2.1", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0.70"

